# nlp-based-data-compression

./: CMakeLists.txt  README.md  requirements.txt  script.py
data/gpt2-vocab/: unicode.json
nlohmann/: json.hpp
src/: debug_macros.h  main.cpp  predictor.cpp  predictor.h  rans.cpp  rans.h  tokenizer.cpp  tokenizer.h  vocabulary_filter.cpp  vocabulary_filter.h
src/python_helpers/: serialize_model.py
tests/: rans_tests.cpp
